# SimpleTextIndexingBasedOnGrammar

./: .gitignore  CMakeLists.txt  Make.helper  Makefile  README.md  dna.py  examples  patternread.py  plot2.py  plot3.py  plot_10m.py  plot_aaab.py  plot_construction_time.py  plot_density_search_time.py  plot_search_time.py  plot_timeperocc_occ_big.py  plotter.py  resultread.py  sdsl.cfg  sdsl.txt  test.integers  test.integers.sorted  test.integers.sorted.Ypacked
memoria/: anexoA.tex  bibliografia.bib  cap2.tex  cap3.tex  cap4.tex  conclu.tex  intro.tex  main.aux  main.fdb_latexmk  main.fls  main.lof  main.lot  main.tex  main.toc  umemoria.cls
repairs/repair110811/: Makefile  basics.h  decoder.c  decoder.h  encoder.c  encoder.h  main.c  repair.c  repair.h
repairs/repairnavarro/: README  irepair.c  makefile  read.c  repair.c
repairs/repairnavarro/bal/: repair.c
repairs/repairnavarro/large/: despair.c  idespair.c  irepair.c  repair.c
repairs/repairnavarro/large/bal/: despair.c  heap.c  idespair.c  irepair.c  repair.c
src/: debug_config.cpp  debug_config.hpp  file_handler.cpp  file_handler.hpp  grid  grid.cpp  grid.hpp  helper.cpp  helper.hpp  main.cpp  npatterns.cpp  npatterns.hpp  nsequences.cpp  nsequences.hpp  patterns.cpp  patterns.hpp  permutations.cpp  permutations.hpp  ppbv.cpp  ppbv.hpp  printers.cpp  printers.hpp  re-pair.cpp  re-pair.hpp  repair_reader.cpp  repair_reader.hpp  sdsl  sdslsrc  sequences.cpp  sequences.hpp  wavelet_matrix.cpp  wavelet_matrix.hpp  wavelet_tree.cpp
test/: globals.h  grid_test.cpp  main.cpp  patterns_test.cpp  permutations_test.cpp  ppbv_test.cpp  sequence_test.cpp  wm_test.cpp
textfile/: .fuse_hidden0001027a00000002  abra.txt  alice.txt  alice_chapter_I.txt  alice_s_adventures_in_wonderland.txt  cuentos.txt  poema20.txt  quijote.txt  scream.txt  sdsl.rp
